--- a/src/renderer/src/components/tab/tab.css
+++ b/src/renderer/src/components/tab/tab.css
@@ -1,24 +1,62 @@
-.tab{
+.tab {
         position: absolute;
         top: 0;
         margin: 0;
         left: 0;
         /*去掉边距*/
         width: 100%;
-        height: 30px;
-        background-color: #000000;
+        height: 40px;
+        background-color: #fefefe99;
+        display: flex;
+
 
 }
-.addTest{
+
+.addTest {
         padding: 4px;
         background-color: #0099ff;
-        color:#fefefe;
+        color: #fefefe;
         border: 0;
         border-radius: 6px;
+        margin: auto;
+        margin-left: 0;
+        margin-right: 10px;
 }
-.addTest:hover{
+
+.addTest:hover {
         background-color: #22aaff;
 }
-.addTest:active{
+
+.addTest:active {
         background-color: #0066ff;
+}
+
+.logo {
+        width: 30px;
+        height: 30px;
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-left: 2px;
+        margin-right: 2px;
+}
+
+.span {
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-left: 2px;
+        margin-right: 2px;
+        color: #0066ff
+}
+
+.Tabinput {
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-left: 2px;
+        margin-right: 2px;
+        color: #090909;
+        outline: none;
+        border: 0;
+        height: 25px;
+        border-radius: 5px;
+
 }
