add detecting mouse position in canvas object

--- a/src/renderer/src/components/about/about.css
+++ b/src/renderer/src/components/about/about.css
@@ -13,7 +13,8 @@
         padding: auto;
         animation-duration: 0.3s;
         animation-name: Background;
-
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
 }
 
 .version {
