--- a/src/renderer/src/components/tab/tab.css
+++ b/src/renderer/src/components/tab/tab.css
@@ -1,4 +1,4 @@
-.tab {
+.tab-tab {
         position: absolute;
         top: 0;
         margin: 0;
@@ -6,32 +6,20 @@
         /*去掉边距*/
         width: 100%;
         height: 40px;
-        background-color: #fefefe99;
+        background-color: #fefefecc;
         display: flex;
         z-index: 1;
 
 }
 
-.addTest {
+.tab-addTest {
         padding: 4px;
-        background-color: #0099ff;
-        color: #fefefe;
-        border: 0;
-        border-radius: 6px;
         margin: auto;
         margin-left: 0;
         margin-right: 10px;
 }
 
-.addTest:hover {
-        background-color: #22aaff;
-}
-
-.addTest:activee {
-        background-color: #0066ff;
-}
-
-.logo {
+.tab-logo {
         width: 30px;
         height: 30px;
         margin-top: auto;
@@ -40,7 +28,7 @@
         margin-right: 2px;
 }
 
-.span {
+.tab-span {
         margin-top: auto;
         margin-bottom: auto;
         margin-left: 2px;
@@ -48,7 +36,7 @@
         color: #0066ff
 }
 
-.Tabinput {
+.tab-Tabinput {
         margin-top: auto;
         margin-bottom: auto;
         margin-left: 2px;
@@ -59,4 +47,27 @@
         height: 25px;
         border-radius: 5px;
 
+}
+.tab-tool{
+        right: 0px;
+        position: absolute;
+        height: 100%;
+        width: 50px;
+}
+.tab-settings-button{
+        top:30px;
+        height: 100%;
+        width: 100%;
+        border: 0;
+        border-radius: 10px;
+        min-width: 0;
+        min-height: 0;
+        background-color: #ffffff00;
+        transition: background-color 0.2s ease;
+}
+.tab-settings-button:hover{
+        background-color: #ffffff88;
+}
+.tab-settings-button:active {
+        background-color: #0099ff22;
 }
