--- a/src/renderer/src/components/tab/tab.css
+++ b/src/renderer/src/components/tab/tab.css
@@ -1,6 +1,6 @@
 .tab-tab {
         position: absolute;
-        top: 0;
+        bottom: 0;
         margin: 0;
         left: 0;
         /*去掉边距*/
